Changed way of showing and animating carousel-items

--- a/src/components/carousel/carousel.sandbox.html
+++ b/src/components/carousel/carousel.sandbox.html
@@ -8,6 +8,16 @@
         -->
     </p>
     <p>
-        <m-carousel><!-- Test case --></m-carousel>
+        <m-carousel style="height: 400px;">
+            <m-carousel-item>
+                <img src="https://picsum.photos/300" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/400" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+        </m-carousel>
     </p>
 </div>
