--- a/src/components/link/link.sandbox.html
+++ b/src/components/link/link.sandbox.html
@@ -4,6 +4,8 @@
     <h2>Icon name "m-svg__clock"</h2>
     <p><m-link icon-name="m-svg__clock">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius reiciendis tempore modi rerum beatae. Placeat nam iure cupiditate ipsum non ipsa! Sequi enim ab, est tenetur a aliquam officiis cupiditate!</m-link></p>
 
+    <p><m-link icon-name="m-svg__clock" :disabled="true">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius reiciendis tempore modi rerum beatae. Placeat nam iure cupiditate ipsum non ipsa! Sequi enim ab, est tenetur a aliquam officiis cupiditate!</m-link></p>
+
     <h2>Skin text</h2>
     <p><m-link skin="text" icon-name="m-svg__clock">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius reiciendis tempore modi rerum beatae. Placeat nam iure cupiditate ipsum non ipsa! Sequi enim ab, est tenetur a aliquam officiis cupiditate!</m-link></p>
     <div class="m-u--margin-top--l" style="background: grey; padding: 16px;">
