add padding so context menu doesn't hide toolbar

--- a/src/components/rich-text-editor/rich-text-editor.scss
+++ b/src/components/rich-text-editor/rich-text-editor.scss
@@ -59,6 +59,14 @@
                 display: inline-block;
             }
         }
+
+        /deep/ .fr-placeholder {
+            padding-top: 50px !important;
+        }
+
+        /deep/ .fr-box.fr-basic .fr-element {
+            padding-top: 50px;
+        }
     }
 
     // mode desktop
