--- a/src/components/carousel-item/carousel-item.html
+++ b/src/components/carousel-item/carousel-item.html
@@ -1,3 +1,3 @@
-<div class="m-carousel-item" :style="{transform : translate}">
+<div class="m-carousel-item" :style="{transform : translate, left: margin + 'px', right: margin + 'px'}">
     <slot></slot>
 </div>
