--- a/src/components/carousel/carousel.sandbox.html
+++ b/src/components/carousel/carousel.sandbox.html
@@ -8,7 +8,8 @@
         -->
     </p>
     <p>
-        <m-carousel style="height: 400px;">
+        <m-button @click="onClick">tresst</m-button>
+        <m-carousel style="height: 400px;" :margin="test">
             <m-carousel-item>
                 <img src="https://picsum.photos/300" alt="">
             </m-carousel-item>
