--- a/src/components/carousel-item/carousel-item.scss
+++ b/src/components/carousel-item/carousel-item.scss
@@ -7,4 +7,7 @@
     bottom: 0;
     transition: transform $m-transition-duration--xl;
     background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
