do not hide submit buttons

--- a/src/components/rich-text-editor/rich-text-editor.scss
+++ b/src/components/rich-text-editor/rich-text-editor.scss
@@ -58,6 +58,10 @@
             &[data-cmd="fullscreen"] {
                 display: inline-block;
             }
+
+            &.fr-submit {
+                display: inline-block;
+            }
         }
 
         /deep/ .fr-placeholder {
