--- a/src/components/carousel-item/carousel-item.scss
+++ b/src/components/carousel-item/carousel-item.scss
@@ -10,4 +10,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    & * {
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
