--- a/src/components/carousel/carousel.sandbox.html
+++ b/src/components/carousel/carousel.sandbox.html
@@ -19,6 +19,12 @@
             <m-carousel-item>
                 <img src="https://picsum.photos/500" alt="">
             </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
         </m-carousel>
     </p>
 </div>
