--- a/src/components/carousel/carousel.sandbox.html
+++ b/src/components/carousel/carousel.sandbox.html
@@ -64,4 +64,56 @@
             </m-carousel-item>
         </m-carousel>
     </p>
+    <h3>Carousel - Big version</h3>
+    <p class="m-u--margin-bottom">The m-carousel with a lot of slide</p>
+    <p>
+        <m-button @click="onClick">Switch context</m-button>
+        <m-carousel style="height: 400px;" margin="0">
+            <m-carousel-item>
+                <img src="https://picsum.photos/300" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/400" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/600" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/700" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/800" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/900" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/300" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/400" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+        </m-carousel>
+    </p>
 </div>
