--- a/src/components/carousel-item/carousel-item.html
+++ b/src/components/carousel-item/carousel-item.html
@@ -1,3 +1,3 @@
-<li class="m-carousel-item" :style="{transform : translate, left: margin + 'px', right: margin + 'px'}" v-if="isLoad">
+<li class="m-carousel-item" :style="{transform : translate, left: margin + 'px', right: margin + 'px'}">
     <slot></slot>
 </li>
