deactivate insertion submenu

--- a/src/components/rich-text-editor/rich-text-editor.scss
+++ b/src/components/rich-text-editor/rich-text-editor.scss
@@ -55,7 +55,9 @@
             display: none;
 
             &[data-cmd*="-sub-menu"],
-            &[data-cmd="fullscreen"] {
+            &[data-cmd="fullscreen"],
+            &[data-cmd="insertLink"],
+            &[data-cmd="specialCharacters"] {
                 display: inline-block;
             }
 
