--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -4,8 +4,9 @@
     'm--is-skin-warning': skin=='warning'
     }">
     <h1 class="m-error-template__title">{{title}}</h1>
-    <div class="m-error-template__icon-container">
-        <img class="m-error-template__icon" :src="iconUrl" :style="styleObject" />
+    <div  class="m-error-template__icon-container" >
+        <div class="m-error-template__icon" :style="styleObject" v-html="svg" :title="title" v-if="isSvg"></div>
+        <m-icon class="m-error-template__icon" :name="iconName" :svg-title="title" :size="size + 'px'" v-else></m-icon>
     </div>
     <p ref="hint" class="m-error-template__hints" v-if="hasHints" v-for="hint in hints">{{hint}}</p>
     <div class="m-error-template__details" v-if="$slots['default']">
