--- a/src/components/error-template/error-template.scss
+++ b/src/components/error-template/error-template.scss
@@ -50,6 +50,10 @@
                 background-color: $m-color--warning-lightest;
             }
         }
+
+        &__svg {
+            z-index: 1;
+        }
     }
 
     &__icon {
