correct unhighligthed icon bug + change size limit to switch mode

--- a/src/components/rich-text-editor/adapter/vue-froala.scss
+++ b/src/components/rich-text-editor/adapter/vue-froala.scss
@@ -27,7 +27,7 @@
         border-bottom: 1px solid $m-color--grey-light;
 
         button[id*='-sub-menu'] {
-            img {
+            svg {
                 margin-left: 8px;
                 margin-right: 16px;
             }
