--- a/src/styles/abstracts/_var-font.scss
+++ b/src/styles/abstracts/_var-font.scss
@@ -22,6 +22,13 @@ $m-font-size--h4: 24px !default;
 $m-font-size--h5: 20px !default;
 $m-font-size--h6: 16px !default;
 
+$m-font-size--mobile-h1: 30px !default;
+$m-font-size--mobile-h2: 26px !default;
+$m-font-size--mobile-h3: 22px !default;
+$m-font-size--mobile-h4: 18px !default;
+$m-font-size--mobile-h5: 16px !default;
+$m-font-size--mobile-h6: 16px !default;
+
 // ======================================================================
 //  Font weight
 // ======================================================================
