--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,13 +2,13 @@
 //  Titles
 // ======================================================================
 
-@include titleStyles();
+@include m-title-styles();
 
 // ======================================================================
 //  Text
 // ======================================================================
 
-@include textStyles();
+@include m-text-styles();
 
 // ======================================================================
 //  Link
