--- a/src/components/rich-text-editor/rich-text-editor.scss
+++ b/src/components/rich-text-editor/rich-text-editor.scss
@@ -66,6 +66,10 @@
             }
         }
 
+        /deep/ .fr-separator {
+            display: none;
+        }
+
         /deep/ .fr-placeholder {
             padding-top: 50px !important;
         }
