--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -1,20 +1,42 @@
-<article class="m-error-template" :class="{
-    'm--is-skin-information': skin=='information',
-    'm--is-skin-error': skin=='error',
-    'm--is-skin-warning': skin=='warning'
-    }">
-    <h1 class="m-error-template__title">{{title}}</h1>
-    <div  class="m-error-template__icon-container" >
-        <div class="m-error-template__icon" :style="styleObject" v-html="svg" :title="title" v-if="isSvg"></div>
-        <m-icon class="m-error-template__icon" :name="iconName" :svg-title="title" :size="size + 'px'" v-else></m-icon>
+<article class="m-error-template"
+         :class="{'m--is-state-success': state=='success',
+                  'm--is-state-information': state=='information',
+                  'm--is-state-warning': state=='warning',
+                  'm--is-state-error': state=='error',}">
+    <header class="m-error-template__header">
+        <h2 class="m-error-template__title">{{title}}</h2>
+        <div  class="m-error-template__icon-container" >
+            <div class="m-error-template__icon"
+                :style="styleObject"
+                v-html="svg"
+                :title="title"
+                v-if="isSvg"></div>
+            <m-icon class="m-error-template__icon"
+                    :name="iconNameProp"
+                    :svg-title="title"
+                    :size="size + 'px'"
+                    v-else></m-icon>
+        </div>
+    </header>
+    <div class="m-error-template__body">
+        <p class="m-error-template__hints"
+            :class="{'m--no-content': !hasLinksAndSlot}"
+            v-if="hasHints"
+            v-for="hint in hints"
+            ref="hint">{{hint}}</p>
+        <div class="m-error-template__details"
+            v-if="$slots.default">
+            <slot></slot>
+        </div>
+        <ul class="m-error-template__links"
+            v-if="hasLinks">
+            <li ref="link"
+                v-for="link in links">
+                <m-link class="m-error-template__link"
+                        icon-name="m-svg__chevron--right"
+                        mode="link" :url="link.url"
+                        :target="isTargetExternal(link.external)">{{link.label}}</m-link>
+            </li>
+        </ul>
     </div>
-    <p ref="hint" class="m-error-template__hints" :class="{ 'm--no-content': !hasLinksAndSlot}" v-if="hasHints" v-for="hint in hints">{{hint}}</p>
-    <div class="m-error-template__details" v-if="$slots['default']">
-        <slot></slot>
-    </div>
-    <ul v-if="hasLinks" class="m-error-template__links">
-        <li ref="link" v-for="link in links">
-            <m-link class="m-error-template__link" icon-name="m-svg__chevron--right" mode="link" :url="link.url" :target="isTargetExternal(link.external)">{{link.label}}</m-link>
-        </li>
-    </ul>
 </article>
