--- a/src/components/error-template/error-template.scss
+++ b/src/components/error-template/error-template.scss
@@ -133,7 +133,7 @@
         margin: 0;
 
         &:not(:first-child) {
-            margin: $m-margin 0 0 0;
+            margin: $m-spacing 0 0 0;
         }
     }
 
@@ -143,7 +143,7 @@
         padding: 0;
 
         &:not(:first-child) {
-            margin: $m-margin 0 0 0;
+            margin: $m-spacing 0 0 0;
         }
     }
 }
