--- a/src/components/error-template/error-template.sandbox.html
+++ b/src/components/error-template/error-template.sandbox.html
@@ -1,7 +1,7 @@
 <div>
     <h5>default - different skins ans icons</h5>
     <div style="border: solid 1px black; padding: 10px; width: 600px;">
-        <m-error-template state="error" :title="title"></m-error-template>
+        <m-error-template></m-error-template>
     </div>
 
     <br />
