MODUL-284 - prop size change (number to string)

--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -16,7 +16,7 @@
             <m-icon class="m-error-template__icon"
                     :name="iconNameProp"
                     :svg-title="title"
-                    :size="size + 'px'"
+                    :size="size"
                     v-else></m-icon>
         </div>
     </header>
