--- a/src/components/message/message.sandbox.html
+++ b/src/components/message/message.sandbox.html
@@ -33,4 +33,10 @@
     <m-message class="m-u--margin-top--l" title="Warning" state="warning" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Information" state="information" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Success" skin="page">Bonjour</m-message>
+
+    <h2>Skin page-light</h2>
+    <m-message class="m-u--margin-top--l" skin="page-light" title="Error" state="error"></m-message>
+    <m-message class="m-u--margin-top--l" skin="page-light" title="Warning" state="warning"></m-message>
+    <m-message class="m-u--margin-top--l" skin="page-light" title="Information" state="information"></m-message>
+    <m-message class="m-u--margin-top--l" skin="page-light" title="Success">Bonjour</m-message>
 </div>
