MODUL-284 - Update m-message - remplace 'success' by 'confirmation'

--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -1,5 +1,5 @@
 <article class="m-error-template"
-         :class="{'m--is-state-success': isStateSuccess,
+         :class="{'m--is-state-confirmation': isStateConfirmation,
                   'm--is-state-information': isStateInformation,
                   'm--is-state-warning': isStateWarning,
                   'm--is-state-error': isStateError,
