--- a/src/components/error-template/error-template.sandbox.html
+++ b/src/components/error-template/error-template.sandbox.html
@@ -19,7 +19,7 @@
     <br />
 
     <div style="border: solid 1px black; padding: 10px; width: 600px;">
-        <m-error-template state="success" :title="title"></m-error-template>
+        <m-error-template state="confirmation" :title="title"></m-error-template>
     </div>
 
     <br />
