--- a/src/components/message/message.html
+++ b/src/components/message/message.html
@@ -1,5 +1,5 @@
 <div class="m-message"
-    :class="{'m--is-state-success': isStateSuccess,
+    :class="{'m--is-state-confirmation': isStateConfirmation,
             'm--is-state-information': isStateInformation,
             'm--is-state-warning': isStateWarning,
             'm--is-state-error': isStateError,
