Increase special character icon size in the toolbar Remove reference to fortAwesome in package.json since we're using a CDN now

--- a/src/components/rich-text-editor/adapter/vue-froala.scss
+++ b/src/components/rich-text-editor/adapter/vue-froala.scss
@@ -132,6 +132,12 @@
                 color: $m-color--grey-darker;
             }
 
+            button[data-cmd*='specialCharacters'] {
+                :not(.fr-sr-only) {
+                    font-size: 16px;
+                }
+            }
+
             button[id*='-sub-menu']::after,
             .popup-button::after {
                 position: absolute;
