set valid scrllable-container

--- a/src/components/rich-text-editor/rich-text-editor.sandbox.html
+++ b/src/components/rich-text-editor/rich-text-editor.sandbox.html
@@ -44,7 +44,7 @@
                 </span>
             </template>
             <div>
-                <m-rich-text-editor scrollable-container=".m-editss-window__body" class="p-formulaire-texte__textearea" :label="'texte riche'"
+                <m-rich-text-editor scrollable-container=".m-edit-window__body" class="p-formulaire-texte__textearea" :label="'texte riche'"
                     tag-style="p" max-width="720px" v-model="fullScreenFormModel"></m-rich-text-editor>
             </div>
         </m-edit-window>
